--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
 	margin: 0 10px;
+	scroll-behavior: smooth;
 }
 
 body {
@@ -8,8 +9,6 @@ body {
   background-image: url("src/background.jpg");
   background-attachment: fixed;
 }
-
-body {}
 
 .container {
   max-width: 600px;
@@ -21,10 +20,12 @@ body {}
 }
 
 h1 {
+  color: gold;
   font-size: 36px;
   font-weight: 800;
   margin-bottom: 0;
   margin-top: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 
 input[type="text"] {
@@ -45,7 +46,7 @@ button {
   border-radius: 5px;
   border: none;
   background-color: #4e4f50;
-  color: #d8d8d8;
+  color: gold;
   cursor: pointer;
 }
 
@@ -59,6 +60,7 @@ ul {
 }
 
 li {
+  color: gold;
   font-size: 18px;
   padding: 10px;
   margin: 10px 0;
@@ -105,7 +107,6 @@ a {
 	margin-top: 0;
 }
 
-/* Rounded button */
 button.rounded {
   border-radius: 50%;
   width: 50px;
@@ -124,7 +125,6 @@ button.rounded:hover {
   background-color: #646566;
 }
 
-/* "Go to Top" button */
 button.go-to-top {
   font-size: 16px;
   padding: 5px 10px;
@@ -157,4 +157,30 @@ a:hover {
 
 a:active {
   text-decoration: underline;
+}
+
+p {
+  color: gold;
+}
+
+#clear-btn:hover{
+  color: red;
+}
+
+#add-btn:hover {
+  color: greenyellow;
+}
+
+marquee {
+  background: rgba(255, 0, 0, 0.5);
+  border-radius: 10px;
+  border: none;
+  font-size: large;
+  margin: 0%;
+}
+
+marquee > p {
+  margin: 0%;
+  color: #a5a5a5;
+  font-family: 'Times New Roman', Times, serif;
 }
