--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body {
   color: #d8d8d8;
   font-family: Arial, Helvetica, sans-serif;
   background-image: url("src/background.jpg");
+  background-position: center;
   background-attachment: fixed;
+  background-size: auto;
 }
 
 .container {
@@ -191,14 +193,6 @@ marquee > p {
   font-family: 'Times New Roman', Times, serif;
 }
 
-footer {
-  background-color: #3a3b3c;
-  bottom: 0%;
-  left:0%;
-  position: fixed;
-  width: 100%;
-}
-
 center {
   display: block;
   text-align: center;
@@ -210,4 +204,8 @@ center {
 
 .task-input {
   width: 100%;
+}
+
+hr {
+  background-color: #3a3b3c;
 }
